<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_24"
    android:paddingRight="@dimen/dp_24"
    tools:context="com.medlinker.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_90"
        android:text="@string/please_input_verify_code"
        android:includeFontPadding="false"
        android:textColor="@color/ui_black1"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_code_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/verify_code_send_to"
        android:textColor="@color/ui_black3"
        android:textSize="@dimen/sp_13" />

    <com.medlinker.login.widget.SplitEditTextView
        android:id="@+id/vc_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_45"
        android:inputType="number"
        android:longClickable="false"
        android:textColor="#2a2a2a"
        android:textSize="@dimen/sp_24"
        app:et_borderSize="@dimen/dp_1"
        app:et_borderColor="#332A2A2A"
        app:et_contentNumber="6"
        app:et_contentShowMode="text"
        app:et_cursorHeight="@dimen/dp_25"
        app:et_cursorColor="@color/color_main"
        app:et_cursorWidth="@dimen/dp_2"
        app:et_inputBoxStyle="singleBox"
        app:et_spaceSize="@dimen/dp_15"
        app:et_cornerSize="@dimen/dp_6"

        app:et_underlineFocusColor="#2a2a2a"
        app:et_underlineNormalColor="#2a2a2a" />

    <com.medlinker.widget.shape.ShapeButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_45"
        android:enabled="false"
        android:gravity="center"
        android:padding="@dimen/sp_13"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:sp_radius="@dimen/dp_22"
        android:visibility="gone"
        tools:visibility="visible"
        app:sp_solid="@color/color_main" />

    <TextView
        android:id="@+id/tv_count_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:enabled="false"
        android:text="@string/get_verify_code_again"
        android:textColor="@color/ui_black4"
        android:textSize="@dimen/sp_13" />
</LinearLayout>