<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_24"
    android:paddingRight="@dimen/dp_24"
    tools:context="com.medlinker.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_90"
        android:includeFontPadding="false"
        android:text="@string/use_phone_login"
        android:textColor="@color/ui_black1"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/phone_login_tip"
        android:textColor="@color/ui_black3"
        android:textSize="@dimen/sp_13" />

    <com.medlinker.widget.shape.ShapeRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_53"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:sp_radius="@dimen/dp_22"
        app:sp_solid="#F6F7F8">

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/ui_black1"
            android:textColorHint="@color/ui_black4"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/iv_clear_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_8"
            android:paddingStart="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:src="@mipmap/ic_close"
            android:visibility="invisible"
            tools:visibility="visible" />
    </com.medlinker.widget.shape.ShapeRelativeLayout>

    <com.medlinker.widget.shape.ShapeTextView
        android:id="@+id/btn_get_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_32"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/get_verify_code"
        android:textColor="@color/btn_login_code_color"
        android:textSize="@dimen/sp_18"
        app:sp_radius="@dimen/dp_22"
        app:sp_solid="@color/color_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/cb_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/btn_privacy_check"
            tools:checked="false" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ui_black4"
            android:textSize="@dimen/sp_12"
            tools:text="已阅读并同意《用户协议》和《隐私政策》" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_login_sy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_30"
            android:drawableTop="@mipmap/ic_login_sy"
            android:drawablePadding="@dimen/dp_7"
            android:gravity="center_horizontal"
            android:text="一键登录"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>
</LinearLayout>